--- a/app/modules/entities/scss/_history.scss
+++ b/app/modules/entities/scss/_history.scss
@@ -4,7 +4,7 @@
     background-color: $darker-grey;
     @include radius;
     padding: 0.5em;
-    margin: 0.5em;
+    margin: 0.5em 0 0.5em 0;
   }
   .patch{
     @include radius;
@@ -59,5 +59,13 @@
   .showUser{
     color: white;
     @include underline-on-hover(white);
+  }
+}
+
+#historyToggler{
+  // Take all the space horizontally
+  display: block;
+  &, .fa{
+    color: white
   }
 }
